# worktree-tui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_AGENT.md  agent_worklog.md  fetch_final.rs  ideas.md  impl_app.rs  test_bridge.sh  tmux_bridge.sh  todo.md  tui_agent_loop.sh  tui_claude_agent_loop.sh  tui_droid_agent_loop.sh  worktree.json
src/: cache.rs  main.rs
