[package]
name = "worktree-tui"
version = "0.1.0"
edition = "2021"
default-run = "worktree-tui"
description = "A beautiful Git worktree viewer and manager with Claude-inspired design"
authors = ["Your Name"]
license = "MIT"

[dependencies]
# TUI framework
ratatui = "0.30"
crossterm = "0.29.0"

# Path handling
dunce = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# TTY detection for shell integration
atty = "0.2"

# Date/time handling
chrono = "0.4"

# Unicode width for proper text display
unicode-width = "0.2"

[[bin]]
name = "worktree-tui"
path = "src/main.rs"

[[bin]]
name = "wtt"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
